# raytracer-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: canvas.hpp  main.cpp  primitives.hpp  raytrace.hpp  scene.hpp
